import "client.comm.proto";
package client;

// 单个宝石坑的数据(存储)
message gem_info {
	optional uint32 hole_id         = 1; // 宝石镶嵌坑ID(装备格子ID * 10 + 位置：1，2，3，4，5，6)
	optional uint32 gem_type		= 2; // 宝石类型
	optional uint32 gem_level	    = 3; // 宝石品阶（等级）
	optional uint32 gem_exp		    = 4; // 宝石经验值
}

// 宝石列表请求
message gem_list_req {
	required uint32 time = 1;
	optional server_head  svr_head      = 1000;
}

// 宝石列表返回
message gem_list_rsp{
	required uint32   list_type = 1;
	repeated gem_info info		= 2;
}

// 宝石升级
message gem_level_up_req{
	required uint32 gem_pos				= 1; // 装备格子ID
	optional server_head  svr_head      = 1000;
}

message gem_level_up_rsp{
	required uint32 result_type = 1; // 0 成功  1 配置表错误 2 部位不对 3 该部位宝石等级已爆
	required uint32 gem_pos		= 2; // 装备格子ID
	optional uint32 cir_count	= 3; // 暴击的倍数 1 ，2 ，3
	repeated gem_info info		= 4; 
}
